resources/app-sre-stage/observatorium-metrics-stage/infogw-data.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: source
  name: infogw-data
spec:
  host: infogw-data-observatorium.api.stage.openshift.com
  # TODO(kakkoyun): Uncomment while migrating.
  # host: infogw-data.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-query-frontend
    weight: 100
  wildcardPolicy: None
# This route originally was for the telemeter-prometheus
# We are still keeping it around to redirect to the new thanos querier service until docs are updated
