resources/app-sre-stage/observatorium-metrics-stage/observatorium-alertmanager-stage.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/balance: source
    haproxy.router.openshift.io/timeout: 5m
  labels:
    app: observatorium-alertmanager
  name: observatorium-alertmanager
spec:
  host: observatorium-alertmanager.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-alertmanager
    weight: 100
  wildcardPolicy: None
