resources/app-sre-stage/observatorium-metrics-stage/observatorium-thanos-querier-cache-stage.route.yaml

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: "15m"
  labels:
    app: observatorium-querier-fronted
  name: observatorium-thanos-querier-frontend
spec:
  # host: infogw-proxy.api.stage.openshift.com
  # TODO(kakkoyun): Uncomment while migrating.
  host: infogw-proxy-observatorium.api.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: observatorium-thanos-query-frontend
    weight: 100
  wildcardPolicy: None
